--- a/notes/代码风格规范.md
+++ b/notes/代码风格规范.md
@@ -2,3 +2,4 @@
 - [Google Java Style Guide](http://google.github.io/styleguide/javaguide.html)
 - [阿里巴巴Java开发手册](https://github.com/alibaba/p3c)
 
+![image](https://user-images.githubusercontent.com/75243664/220229189-3ef8faf5-040a-4d32-bf7f-1830f868fd7e.png)
